--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Github.io, Test Site
+title: Github.io Site
 ---
 <div class="blurb">
 	<h1>Standard Ebooks Hints and Ticks</h1>
