--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 title: Github.io Site
 ---
 <div class="blurb">
-	<h1>Standard Ebooks Hints and Ticks</h1>
-	<p>This is a short paragraph to serve as a placeholder. <a href="/about">This is a link sample</a></p>
-</div><!-- /.blurb -->
+	<h1>Standard Ebooks Hints and Tricks</h1>
+	<p>This is a repository of information regarding building ebooks for the Standard Ebooks project. </p>
+	<ul>
+		<li><a href="/a-guide">A non-programmers guide to contributing to Standard Ebooks</a></li>
+	</ul>
+</div>
