--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ title: Github.io Site
 	<p>This is a repository of information regarding building ebooks for the Standard Ebooks project. </p>
 	<ul>
 		<li><a href="/a-guide">A non-programmers guide to contributing to Standard Ebooks</a></li>
-		<li><a href="/howto">Some how to's for contributing to Standard Ebooks</a></li>
+		<li><a href="/how-to">Some “how to's” for contributing to Standard Ebooks</a></li>
 	</ul>
 </div>
