--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Github.io Site
 	<h1>Standard Ebooks Hints and Tricks</h1>
 	<p>This is a repository of information regarding building ebooks for the Standard Ebooks project. </p>
 	<ul>
-		<li><a href="/a-guide">A non-programmers guide to contributing to Standard Ebooks</a></li>
-		<li><a href="/how-to">Some “how to's” for contributing to Standard Ebooks</a></li>
+		<li><a href="/a-guide">Part 1: A non-programmers guide to contributing to Standard Ebooks</a></li>
+		<li><a href="/how-to">Part 2: Some “how to's” for contributing to Standard Ebooks</a></li>
 	</ul>
 </div>
