--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Github.io Site
 ---
 <div class="blurb">
 	<h1>Standard Ebooks Hints and Tricks</h1>
+	<img src="images/selogo.svg">
 	<p>This is a repository of information regarding building ebooks for the Standard Ebooks project. </p>
 	<ul>
 		<li><a href="/a-guide">Part 1: A non-programmers guide to contributing to Standard Ebooks</a></li>
