--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Github.io Site
 <div class="blurb">
 	<img src="images/selogo.svg">
 	<h1>Standard Ebooks Hints and Tricks</h1>
-	<p>This is a repository of information regarding building ebooks for the Standard Ebooks project. </p>
+	<p>This is a repository of information regarding building ebooks for the Standard Ebooks project. It is intended for non-programmers and aims to encourage people who might want to participate in the Standard Ebook project but perhaps do not feel comfortable with the  nature of the tools.</p>
 	<ul>
 		<li><a href="/a-guide">Part 1: A non-programmers guide to contributing to Standard Ebooks</a></li>
 		<li><a href="/how-to">Part 2: Some <em>how to's</em> for contributing to Standard Ebooks</a></li>
