--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Github.io Site
 	<ul>
 		<li><a href="/a-guide">Part 1: A non-programmers guide to contributing to Standard Ebooks</a></li>
 		<li><a href="/how-to">Part 2: Some <em>how to's</em> for contributing to Standard Ebooks</a></li>
+		<li><a href="/step_by_step">Part 3: a step by step for the <em>Step-by-Step</em></a></li>
 	</ul>
 </div>
 
