--- a/ebook.html
+++ b/ebook.html
@@ -5,9 +5,9 @@ title: ebook CSS
 <div class="blurb">
 	
 	<h1>Private ebooks CSS</h1>
-	<p>This is a repository of information regarding building ebooks for the Standard Ebooks project. It is intended for non-programmers and aims to encourage people who might want to participate in the Standard Ebook project but perhaps do not feel comfortable with the  nature of the tools.</p>
+	<p>This is a repository for  my personal ebook css and templates</p>
 	<ul>
-		<li><a href="/a-guide">Part 1: A non-programmers guide to contributing to Standard Ebooks</a></li>
+		<li><a href="/ebook">Base CSS</a></li>
 	</ul>
 </div>
 
